# deadman-agent

./: .env.example  .gitignore  main.py  pyproject.toml
app/agent/: model.py
app/api/: api_typing.py  routes.py  routes_agent.py  routes_chat.py  routes_doc.py  routes_health.py  routes_history.py  routes_prompt.py  schemas_agent.py  schemas_chat.py  schemas_history.py  schemas_prompt.py  stream_chat.py
app/core/: config.py  log_config.py  logging.py
app/core/agent/: ARCHITECTURE.md  default_model.py  history_store.py  prompt_loader.py  runnable.py  summarization.py  tool_agent.py
app/core/agent/lab/: enrich_assign.py  input_lambda.py
app/core/agent/prompt/: ARCHITECTURE.md  CHANGELOG.md  __init__.py  composer.py  context.py  few_shot_loader.py  knobs.py  manifest.yaml  prompt_loader.py  prompt_version.py  system_prompt.md
app/core/agent/prompt/core/: base.md  safety.md
app/core/agent/prompt/few_shot/: default.yaml
app/core/agent/tools/: __init__.py  light.py
app/core/documents/: base.py  base_helper.py  markdown_splitter.py  splitter_manager.py  text_splitter.py
app/utils/: datetime_format.py
app/utils/file/: file_errors.py  file_loader.py  file_loader_registry.py
doc/: generate_openapi.py  openapi.yaml  prompt-eval-set.md
examples/: markdown_chunking_sample.py
test/utils/file/: test_file_loader.py
tests/: test_history_store.py  test_prompt_version.py
tests/core/: test_tool_agent.py
tests/core/agent/lab/: test_enrich_assign.py  test_runnable_input_lamdba.py
tests/core/agent/prompt/: test_few_shot_loader.py
(+4 files in other folders)
