[project]
name = "deadman-agent-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
      "fastapi>=0.115",
      "uvicorn[standard]>=0.30",
      "python-multipart>=0.0.9",
      "sqlalchemy>=2.0",
      "psycopg[binary]>=3.2",
      "alembic>=1.13",
      "langchain>=0.2",
      "langchain-text-splitters>=0.3",
      "langchain-postgres>=0.0.12",
      "pandas>=2.2",
      "openpyxl>=3.1",
      "pgvector>=0.2.5",
      "dotenv>=0.9.9",
      "pytest>=9.0.3",
      "pylint>=4.0.5",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py314"
